--- a/admin.html
+++ b/admin.html
@@ -221,7 +221,7 @@
 
                       <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#almacen1">
-  Agitación
+  Almacen
 </button>
 
 <!-- Modal -->
