Agregando graficas de almacen

--- a/admin.html
+++ b/admin.html
@@ -14,6 +14,16 @@
   <span class="navbar-brand mb-0 h1">Sanitex Lab.</span>
 </nav>
     </header>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <iframe width="100%" height="900" src="https://datastudio.google.com/embed/reporting/0959f0fe-32b3-4020-a9d4-650ec7b39327/page/cUn5C" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+        </div>
+
+      </div>
+    </section>
     <article>
       <div class="container">
         <div class="row">
